--- a/data-science.html
+++ b/data-science.html
@@ -72,7 +72,7 @@
       
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/lyrahealth/9eeeec31-8655-4054-92ba-025657d812ab'>Lyra Health - Data Scientist - Clinical and Product</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://corti.recruitee.com/o/customer-facing-data-scientist'>
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -93,11 +93,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4491917002'>Job Application for Data Scientist at ShopStyle</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4491917002'>Job Application for Data Scientist at ShopStyle</a></h5> 
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/JobDetails.aspx?site=1&id=989'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/JobDetails.aspx?site=1&id=989'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4499716002'>Job Application for Coach, Data Science, Chicago at Flatiron School</a></h5> 
+<h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4499716002'>Job Application for Coach, Data Science, Chicago at Flatiron School</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago  Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qmQ9Vfw0&k=Job&j=oJzJafwV&__jvst=Employee&__jvsd=swW3ehwv&__jvsc=Twitter&bid=nolYnMwl'>Funding Circle UK Careers - Senior Data Scientist - Model Validation</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qmQ9Vfw0&k=Job&j=oJzJafwV&__jvst=Employee&__jvsd=swW3ehwv&__jvsc=Twitter&bid=nolYnMwl'>Funding Circle UK Careers - Senior Data Scientist - Model Validation</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -257,7 +257,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -336,7 +336,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nADJlMwy'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nADJlMwy'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -360,7 +360,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -376,7 +376,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/castlighthealth/job/od6obfwC'>Castlight Health Careers - Software Engineer (Python / Ruby), Data Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlighthealth/job/od6obfwC'>Castlight Health Careers - Software Engineer (Python / Ruby), Data Science</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -431,7 +431,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://entrepreneursorganization.applytojob.com/apply/TLgOtsyqxO/Manager-Data-Science-Process-Improvement'>Manager, Data Science & Process Improvement - Entrepreneurs' Organization - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://entrepreneursorganization.applytojob.com/apply/TLgOtsyqxO/Manager-Data-Science-Process-Improvement'>Manager, Data Science & Process Improvement - Entrepreneurs' Organization - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
