--- a/data-analyst.html
+++ b/data-analyst.html
@@ -383,7 +383,7 @@
 <p><span class="badge badge-light">Brisbane Sydney Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -466,7 +466,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thrivecausemetics/ed722ed6-c184-4282-8491-e4af79037623'>Thrive Causemetics - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thrivecausemetics/ed722ed6-c184-4282-8491-e4af79037623'>Thrive Causemetics - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA  Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -480,7 +480,7 @@ wealth of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Data Analyst at Evite, Inc. in Los Angeles, CA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autodata.applytojob.com/apply/aFpmVF3lGU/Data-Analyst'>Data Analyst - Autodata Solutions - Career Page</a></h5> 
+<h5><a href='https://autodata.applytojob.com/apply/aFpmVF3lGU/Data-Analyst'>Data Analyst - Autodata Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply to Data Analyst at Autodata Solutions in London, ON, Canada.</p>
 <hr/>
